--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,96 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+img {
+    max-width: 100%;
+}
+
 main {
     height: 100%;
+}
+
+.container {
+    width: 80%;
+    margin: auto;
+}
+
+header {
+    background-color: black;
+}
+
+.logo {
+    color: red;
+}
+
+main {
+    height: 100%;
+    background-color: #141414ee;
+    color: white;
+}
+
+.row {
+    margin: 20px 0;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
+.welcome {
+    padding: 30px 0;
+    height: calc(100vh-100px);
+}
+
+.search {
+    background-color: black;
+    color: white;
+    border: 1px solid white;
+    padding: 3px;
+    width: 180px;
+}
+
+.button {
+    padding: 2px;
+    border-radius: 1px 0;
+}
+
+.header {
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.card:hover .card-body {
+    opacity: 1;
+}
+
+.card-header {
+    background-size: cover;
+    background-position: center;
+    z-index: 1;
+}
+
+.card-body {
+    padding: 20px;
+    list-style: none;
+    gap: 3px;
+}
+
+.card-body img {
+    width: 15px;
+    height: 10px;
 }
